<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/MatchWrap.Vertical">
    <com.kotlin.base.widgets.HeaderBar
            android:id="@+id/mHeaderBar"
            style="@style/MatchWrap"
            app:titleText="@string/order_detail"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <TextView
                    style="@style/MatchWrap"
                    android:textColor="@color/text_light_dark"
                    android:background="@drawable/border_bottom_gray"
                    android:paddingLeft="@dimen/common_margin"
                    android:paddingTop="@dimen/common_margin"
                    android:paddingBottom="@dimen/common_margin_small"
                    android:text="@string/delivery_info"/>
            <com.kotlin.base.widgets.LabelTextView
                    android:id="@+id/mShipNameTv"
                    style="@style/MatchWrap"
                    app:labelText="@string/consignee"/>
            <com.kotlin.base.widgets.LabelTextView
                    android:id="@+id/mShipMobileTv"
                    style="@style/MatchWrap"
                    app:labelText="@string/number"/>
            <com.kotlin.base.widgets.LabelTextView
                    android:id="@+id/mShipAddressTv"
                    style="@style/MatchWrap"
                    app:labelText="@string/address"/>
            <com.kotlin.base.widgets.LabelTextView
                    style="@style/MatchWrap"
                    app:labelText="@string/delivery_type"
                    app:contentText="@string/delivery"/>
            <TextView
                    style="@style/MatchWrap"
                    android:textColor="@color/text_light_dark"
                    android:background="@drawable/border_bottom_gray"
                    android:paddingLeft="@dimen/common_margin"
                    android:paddingTop="@dimen/common_margin"
                    android:paddingBottom="@dimen/common_margin_small"
                    android:text="@string/payment_info"/>
            <com.kotlin.base.widgets.LabelTextView
                    style="@style/MatchWrap"
                    app:labelText="@string/payment_type"
                    app:contentText="@string/pay_online"/>
            <com.kotlin.base.widgets.LabelTextView
                    style="@style/MatchWrap"
                    app:labelText="@string/pay"
                    app:contentText="@string/alipay"/>
            <com.kotlin.base.widgets.LabelTextView
                    android:id="@+id/mTotalPriceTv"
                    style="@style/MatchWrap"
                    app:labelText="@string/total_fee"/>
            <TextView
                    style="@style/MatchWrap"
                    android:textColor="@color/text_light_dark"
                    android:gravity="center_vertical"
                    android:background="@drawable/border_bottom"
                    android:paddingLeft="@dimen/common_padding"
                    android:paddingTop="@dimen/common_padding_small"
                    android:paddingBottom="@dimen/common_padding_small"
                    android:layout_marginTop="@dimen/common_margin"
                    android:drawableLeft="@drawable/icon_shop"
                    android:drawablePadding="@dimen/common_padding_small"/>
            <android.support.v7.widget.RecyclerView
                    android:id="@+id/mOrderGoodsRv"
                    android:layout_height="wrap_content"
                    style="@style/commonRecyclerView"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
