<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/MatchMatch.Common">
    <com.kotlin.base.widgets.HeaderBar
            android:id="@id/mHeaderBar"
            style="@style/MatchWrap"
            app:titleText="@string/new_address"/>
    <LinearLayout
            android:id="@+id/mShipNameView"
            style="@style/MatchWrap.Horizontal"
            android:background="@drawable/border_bottom"
            android:layout_below="@id/mHeaderBar">
        <TextView
                style="@style/WrapMatch"
                android:textColor="@color/text_light_dark"
                android:padding="@dimen/common_padding"
                android:text="@string/consignee"/>
        <EditText
                android:id="@+id/mShipNameEt"
                style="@style/WeightMatch"
                android:textColor="@color/text_light_dark"
                android:background="@null"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/mShipMobileView"
            style="@style/MatchWrap.Horizontal"
            android:background="@drawable/border_bottom"
            android:layout_below="@id/mShipNameView">
        <TextView
                style="@style/WrapMatch"
                android:textColor="@color/text_light_dark"
                android:padding="@dimen/common_padding"
                android:text="@string/contact"/>
        <EditText
                android:id="@+id/mShipMobileEt"
                style="@style/WeightMatch"
                android:textColor="@color/text_light_dark"
                android:background="@null"
                android:inputType="phone"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/mShipAddressView"
            android:background="@drawable/border_bottom"
            android:layout_below="@id/mShipMobileView"
            style="@style/MatchWrap.Horizontal">
        <TextView
                style="@style/WrapMatch"
                android:text="@string/full_address"
                android:textColor="@color/text_light_dark"
                android:padding="@dimen/common_padding"/>
        <EditText
                android:id="@+id/mShipAddressEt"
                style="@style/WeightMatch"
                android:textColor="@color/text_light_dark"
                android:background="@null"/>
    </LinearLayout>
    <Button
            android:id="@+id/mSaveBtn"
            style="@style/MatchWrap"
            android:text="@string/common_save"
            android:textSize="@dimen/text_big_size"
            android:textColor="@color/common_white"
            android:background="@drawable/btn_common_selector"
            android:padding="@dimen/common_padding_middle"
            android:layout_margin="@dimen/common_margin"
            android:layout_alignParentBottom="true"/>
</RelativeLayout>
